[gd_scene load_steps=12 format=2]

[ext_resource path="res://InventoryPanel.tscn" type="PackedScene" id=1]
[ext_resource path="res://PanelBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://Wall.tscn" type="PackedScene" id=3]
[ext_resource path="res://StatsPanel.tscn" type="PackedScene" id=4]
[ext_resource path="res://LI_UnderBoss.gd" type="Script" id=5]
[ext_resource path="res://Assets/boss5.png" type="Texture" id=6]
[ext_resource path="res://Assets/boss3.png" type="Texture" id=7]
[ext_resource path="res://Assets/boss1.png" type="Texture" id=8]
[ext_resource path="res://Assets/boss2.png" type="Texture" id=9]

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 8 ), ExtResource( 9 ), ExtResource( 7 ), ExtResource( 6 ) ],
"loop": true,
"name": "default",
"speed": 5.0
} ]

[sub_resource type="Animation" id=1]
resource_name = "FADE6"
length = 0.6
step = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("AnimationPlayer/ColorRect:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.6 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 0 ), Color( 0, 0, 0, 1 ) ]
}

[node name="LI_UnderBoss" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Wall" parent="." instance=ExtResource( 3 )]

[node name="Panel" parent="." instance=ExtResource( 2 )]

[node name="StatsPanel" parent="." instance=ExtResource( 4 )]

[node name="TextPanel" type="Panel" parent="."]
margin_top = 216.0
margin_right = 144.0
margin_bottom = 256.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="TextPanel"]
margin_left = 1.12372
margin_top = 0.749146
margin_right = 131.124
margin_bottom = 31.7491
text = "Want some contracts, huh?

We need some fellas hit, take a
look."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BottomButtons1" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -62.5
margin_top = 60.5
margin_right = 62.5
margin_bottom = 85.5
custom_constants/vseparation = 12
custom_constants/hseparation = 14
columns = 2
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button5" type="Button" parent="BottomButtons1"]
margin_right = 55.0
margin_bottom = 25.0
rect_min_size = Vector2( 55, 25 )
text = "Inventory"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button6" type="Button" parent="BottomButtons1"]
margin_left = 69.0
margin_right = 124.0
margin_bottom = 25.0
rect_min_size = Vector2( 55, 25 )
text = "Back"

[node name="AcceptBtn" type="Button" parent="."]
visible = false
margin_left = 40.0
margin_top = 134.0
margin_right = 104.0
margin_bottom = 167.0
rect_min_size = Vector2( 55, 25 )
text = "Accept"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ClaimBtn" type="Button" parent="."]
visible = false
margin_left = 40.0
margin_top = 134.0
margin_right = 104.0
margin_bottom = 167.0
rect_min_size = Vector2( 55, 25 )
text = "Accept"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GraphicsPanel" type="Panel" parent="."]
margin_left = 10.0
margin_top = 12.0
margin_right = 134.0
margin_bottom = 82.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AnimatedSprite" type="AnimatedSprite" parent="GraphicsPanel"]
position = Vector2( 61.9815, 34.9926 )
frames = SubResource( 2 )

[node name="ProgTextLbl" type="Label" parent="GraphicsPanel"]
margin_left = 43.0
margin_top = 51.0
margin_right = 81.0
margin_bottom = 63.0
text = "Progress:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CheckupLbl" type="Label" parent="GraphicsPanel"]
margin_left = 58.0
margin_top = 59.0
margin_right = 80.0
margin_bottom = 71.0
text = "0/0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Cont1" type="Panel" parent="GraphicsPanel"]
visible = false
margin_left = 81.0
margin_top = 11.0
margin_right = 121.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GraphicsPanel/Cont1"]
margin_right = 8.0
margin_bottom = 12.0
text = "Contract:

Kill 5
Brutes"

[node name="Cont2" type="Panel" parent="GraphicsPanel"]
visible = false
margin_left = 81.0
margin_top = 11.0
margin_right = 121.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GraphicsPanel/Cont2"]
margin_right = 8.0
margin_bottom = 12.0
text = "Contract:

Survive
5 fights
without 
healing"

[node name="Cont3" type="Panel" parent="GraphicsPanel"]
visible = false
margin_left = 81.0
margin_top = 11.0
margin_right = 121.0
margin_bottom = 60.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="GraphicsPanel/Cont3"]
margin_right = 40.0
margin_bottom = 61.0
text = "Contract:

Win 8
battles
without
dying

"

[node name="ContractChoiceContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -46.0
margin_top = -8.0
margin_right = 47.0
margin_bottom = 54.0
custom_constants/separation = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionBtn1" type="Button" parent="ContractChoiceContainer"]
margin_right = 93.0
margin_bottom = 15.0
rect_min_size = Vector2( 0, 15 )
text = "View Contract 1"

[node name="OptionBtn2" type="Button" parent="ContractChoiceContainer"]
margin_top = 23.0
margin_right = 93.0
margin_bottom = 38.0
rect_min_size = Vector2( 0, 15 )
text = "View Contract 2"

[node name="OptionBtn3" type="Button" parent="ContractChoiceContainer"]
margin_top = 46.0
margin_right = 93.0
margin_bottom = 61.0
rect_min_size = Vector2( 0, 15 )
text = "View Contract 3"

[node name="CenterContainer" type="CenterContainer" parent="."]
margin_left = 8.0
margin_top = 11.0
margin_right = 135.0
margin_bottom = 23.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="CenterContainer"]
margin_left = 43.0
margin_right = 84.0
margin_bottom = 12.0
text = "Underboss"

[node name="InventoryPanel" parent="." instance=ExtResource( 1 )]
visible = false

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/FADE6 = SubResource( 1 )

[node name="ColorRect" type="ColorRect" parent="AnimationPlayer"]
modulate = Color( 1, 1, 1, 0 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="BottomButtons1/Button5" to="." method="_on_Button5_pressed"]
[connection signal="pressed" from="BottomButtons1/Button6" to="." method="_on_Button6_pressed"]
[connection signal="pressed" from="AcceptBtn" to="." method="_on_AcceptBtn_pressed"]
[connection signal="pressed" from="ClaimBtn" to="." method="_on_ClaimBtn_pressed"]
[connection signal="pressed" from="ContractChoiceContainer/OptionBtn1" to="." method="_on_OptionBtn1_pressed"]
[connection signal="pressed" from="ContractChoiceContainer/OptionBtn2" to="." method="_on_OptionBtn2_pressed"]
[connection signal="pressed" from="ContractChoiceContainer/OptionBtn3" to="." method="_on_OptionBtn3_pressed"]
